deploy/kustomize/overlays/prod/limits-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  template:
    spec:
      containers:
        - name: web
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multisitemerger
spec:
  template:
    spec:
      containers:
        - name: multisitemerger
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 1024Mi
              cpu: 250m
